<resources>
    <string name="app_name">Participant App</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_b2b">B2B</string>
    <string name="title_voting">Голосование</string>
    <string name="title_map">Карта</string>
    <string name="title_more">Прочее</string>
    <string name="loading">Загрузка...</string>
    <string name="self_schedule">Личное расписание</string>
    <string name="cultural_program">Культурная программа</string>
    <string name="buisness_program">Деловая программа</string>
    <string name="profile">Профиль</string>
    <string name="organisation">Организация</string>
    <string name="visa">Виза</string>
    <string name="arr_dep">Приезды - Отъезды</string>
    <string name="information">Полезная информация</string>
    <string name="settings">Настройки</string>
    <string name="about">О нас</string>
    <string name="feedback">Обратная связь</string>
    <string name="exit">Выход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appeal">Обращение</string>
    <string name="name">Имя</string>
    <string name="surename">Фамилия</string>
    <string name="gender">Пол</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Эл. почта</string>
    <string name="site">Сайт</string>
    <string name="organisation_name">Название организации</string>
    <string name="organisation_position">Позиция в организации</string>
    <string name="sphere">Сфера</string>
    <string name="organisation_adress">Адрес организации</string>
    <string name="has_visa">Наличие визы</string>
    <string name="arrive_station">Станция прибытия</string>
    <string name="arrive_time">Время прибытия</string>
    <string name="arrive_information">Информация о прибытии</string>
    <string name="departure_station">Станция отправления</string>
    <string name="departure_time">Время отбытия</string>
    <string name="departure_information">Информация об отбытии</string>
    <string name="pushes">Пуш-уведомления</string>
    <string name="push_time">Время оповещения о начале программы</string>
    <string name="language">Язык</string>
    <string name="send_message">Отправьте сообщение организаторам</string>
    <string name="attach_file">Прикрепить файл</string>
    <string name="restrictions">1 изображение, не более 10 Мб</string>
    <string name="send">Отправить</string>
    <string name="arrive_date">Прибыте</string>
    <string name="depart_date">Отбытие</string>
    <string name="theme">Тема*</string>
</resources>