<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?attr/selectableItemBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/title_schedule"
                    android:textColor="#DE000000"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/days_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="1"
            tools:listitem="@layout/cv_day" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C4C4C4"
            android:orientation="vertical"
            tools:context=".ui.schedule.ScheduleFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/self_schedule_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/self_schedule"
                    android:textSize="10sp"
                    app:cornerRadius="48dp"
                    app:strokeColor="#29000000" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/schedule_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:nestedScrollingEnabled="true"
                tools:listitem="@layout/cv_event" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom|center"
        android:background="#ffffff"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/toggle_selector_left_program"
                android:button="@null"
                android:checked="true"
                android:fontFamily="@font/roboto"
                android:foreground="@drawable/ripple_left"
                android:text="@string/buisness_program"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/toggle_selector_right_program"
                android:button="@null"
                android:checked="false"
                android:fontFamily="@font/roboto"
                android:foreground="@drawable/ripple_right"
                android:text="@string/cultural_program"
                android:textAlignment="center" />
        </RadioGroup>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/schedule_prb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>