<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="0"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:longClickable="true"
                    app:cornerRadius="48dp"
                    app:icon="@drawable/ic_baseline_arrow_back_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="#DE000000"
                    app:rippleColor="?android:attr/colorMultiSelectHighlight" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="60dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/feedback"
                    android:textAlignment="center"
                    android:textColor="#DE000000"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/send_message"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text_border_bg"
                android:ems="10"
                android:hint="@string/theme"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/text_et"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border_bg"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPersonName"
                android:lines="16"
                android:maxLines="32"
                android:minLines="32"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp" />

            <LinearLayout
                android:id="@+id/attach_photo_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:longClickable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/attach_file"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/feedback_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="gone"
                        app:srcCompat="@mipmap/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/sometxt_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/restrictions"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        android:visibility="visible" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/remove_btn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="0"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:longClickable="true"
                        android:visibility="gone"
                        app:cornerRadius="48dp"
                        app:icon="@drawable/ic_baseline_clear_24"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconTint="#DE000000"
                        app:rippleColor="?android:attr/colorMultiSelectHighlight" />
                </LinearLayout>

                <View
                    android:id="@+id/divider22"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#C4C4C4" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:layout_weight="3"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/roboto_medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/send"
                android:textColor="#000000"
                android:textSize="10sp"
                app:cornerRadius="48dp"
                app:rippleColor="?android:attr/colorMultiSelectHighlight"
                app:strokeWidth="0dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>